--- a/apps/admin_app/web/manifest.json
+++ b/apps/admin_app/web/manifest.json
@@ -1,35 +1,15 @@
 {
-    "name": "admin_app",
-    "short_name": "admin_app",
-    "start_url": ".",
-    "display": "standalone",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
-    "orientation": "portrait-primary",
-    "prefer_related_applications": false,
-    "icons": [
-        {
-            "src": "icons/Icon-192.png",
-            "sizes": "192x192",
-            "type": "image/png"
-        },
-        {
-            "src": "icons/Icon-512.png",
-            "sizes": "512x512",
-            "type": "image/png"
-        },
-        {
-            "src": "icons/Icon-maskable-192.png",
-            "sizes": "192x192",
-            "type": "image/png",
-            "purpose": "maskable"
-        },
-        {
-            "src": "icons/Icon-maskable-512.png",
-            "sizes": "512x512",
-            "type": "image/png",
-            "purpose": "maskable"
-        }
-    ]
+"name": "MISR Hydraulic Admin",
+"short_name": "MISR Hydraulic Admin",
+"id": "com.MISR_Hydraulic.admin",
+"start_url": "/",
+"scope": "/",
+"display": "standalone",
+"background_color": "#ffffff",
+"theme_color": "#2563EB",
+"description": "لوحة إدارة MISR Hydraulic",
+"icons": [
+{ "src": "icons/icon-192.png", "sizes": "192x192", "type": "image/png" },
+{ "src": "icons/icon-512.png", "sizes": "512x512", "type": "image/png" }
+]
 }
